--- a/N维插值.ipynb
+++ b/N维插值.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "支持任意维度的tensor插值，二维的插值结果和'bilinear'一致，要求tensor为[B,C,……]，1维batch，2维channal格式"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
